flask/eov-flask-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eov-flask-ingress  # Changed to match the workload
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: eov-flask-service
            port:
              number: 80
