flask/eov-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eov-ingress  # Changed to match the workload
  namespace: eov
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: eov-service
            port:
              number: 80
